unpackaged/main/default/objects/Slots_Dummy__c/Slots_Dummy__c.object-meta.xml
<CustomObject>
    <label>Slots Dummy</label>
    <nameField>
        <label>Slots Dummy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>