unpackaged/main/default/objects/Slots_Dummy__c/fields/Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Utilisation__c</fullName>
    <label>Utilisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Utilised</fullName>
            </value>
            <value>
                <fullName>Semi Utilised</fullName>
            </value>
            <value>
                <fullName>Fully Utilised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>