unpackaged/main/default/objects/Slots_Dummy__c/recordTypes/This_Week.recordType-meta.xml
<RecordType>
    <fullName>This_Week</fullName>
    <active>true</active>
    <label>This Week</label>
</RecordType>