unpackaged/main/default/objects/Slots_Dummy__c/recordTypes/Today.recordType-meta.xml
<RecordType>
    <fullName>Today</fullName>
    <active>true</active>
    <label>Today</label>
</RecordType>